--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Android_Fai_report</string>
+    <string name="app_name">ฝ้ายรีพอร์ต</string>
 </resources>
